# Lottery-manager-flet

./: README.md  changes.md  prompt.md  pyproject.toml  refactor.md  requirements.txt  scratch  util.py
app/: config.py  constants.py  main.py
app/core/: __init__.py  auth_service.py  exceptions.py  models.py
app/data/: crud_books.py  crud_configurations.py  crud_games.py  crud_license.py  crud_reports.py  crud_sales_entries.py  crud_shifts.py  crud_users.py  database.py
app/services/: __init__.py  auth_service.py  backup_service.py  book_service.py  configuration_service.py  game_service.py  license_service.py  report_service.py  sales_entry_service.py  shift_service.py  user_service.py
app/ui/: router.py
app/ui/components/: admin_creation_form.py  login_form.py
app/ui/components/common/: appbar_factory.py  dialog_factory.py  paginated_data_table.py  scan_input_handler.py  search_bar_component.py
app/ui/components/dialogs/: book_action_dialog.py
app/ui/components/forms/: admin_creation_form.py  login_form.py  sales_person_creation_form.py
app/ui/components/tables/: __init__.py  books_table.py  games_table.py  sales_entry_item_data.py  sales_entry_items_table.py  users_table.py
app/ui/components/widgets/: __init__.py  function_button.py  number_decimal_input.py
app/ui/views/: admin_dashboard_view.py  employee_dashboard_view.py  first_run_setup_view.py  login_view.py  salesperson_dashboard_view.py
app/ui/views/admin/: __init__.py  book_management.py  game_management.py  sales_entry_view.py  user_management.py
app/utils/: helpers.py  pdf_generator.py
(+5 files in other folders)
